--- a/CSSAnimate/Happy.css
+++ b/CSSAnimate/Happy.css
@@ -10,13 +10,13 @@ body{
 }
 
 #Love{
-  border: 4px solid #ffffff;
+  border: 4px solid #000000;
   width: 960px;
   margin: 1em auto;
   padding: 0;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 
 header{
@@ -34,7 +34,7 @@ h1{
 }
 
 .sub{
-  color: #ffffff;
+  color: #000000;
   font-style: italic;
   font-weight: normal;
   font-family: 'Courgette', cursive;
@@ -44,7 +44,7 @@ h1{
 }
 
 .foot{
-  color: #ffffff;
+  color: #000000;
   font-style: italic;
   font-weight: normal;
   font-family: 'Courgette', cursive;
@@ -118,6 +118,14 @@ ol{
   100% {opacity: 100%;}
 }
 
+h3{
+  color: #000000;
+  font-style: italic;
+  font-weight: normal;
+  font-family: 'Courgette', cursive;
+  text-align: center;
+}
+
 main h3{
   color: #22661a;
   border-bottom: 1px solid #22661a;
@@ -182,7 +190,7 @@ main p a:hover{
 footer{
   grid-column: span 12;
   background-color: #dcdb13;
-  border-top: 4px solid #ffffff;
+  border-top: 4px solid #000000;
   padding: 20px;
   text-align: center;
   margin-top: 20px;
